hphp/test/slow/async/callstatic.php.expectf
Fatal error: cannot declare constructors, destructors, and magic methods such as '__callStatic' async in %s/hphp/test/slow/async/callstatic.php on line 4
